--- a/src/juce_project/vvvfi/Builds/Android/local.properties
+++ b/src/juce_project/vvvfi/Builds/Android/local.properties
@@ -1,2 +1,2 @@
-ndk.dir=C:\\Users\\ryx10\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C:\\Users\\ryx10\\AppData\\Local\\Android\\Sdk
+ndk.dir=/Users/ryx1024/Library/Android/sdk/ndk-bundle
+sdk.dir=/Users/ryx1024/Library/Android/sdk
