--- a/src/juce_project/vvvfi/Builds/MacOSX/Info-VST.plist
+++ b/src/juce_project/vvvfi/Builds/MacOSX/Info-VST.plist
@@ -3,14 +3,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist>
   <dict>
-    <key>LSRequiresIPhoneOS</key>
-    <true/>
-    <key>UIViewControllerBasedStatusBarAppearance</key>
-    <false/>
-    <key>UILaunchStoryboardName</key>
-    <string>LaunchScreen</string>
     <key>CFBundleExecutable</key>
     <string>${EXECUTABLE_NAME}</string>
+    <key>CFBundleIconFile</key>
+    <string></string>
     <key>CFBundleIdentifier</key>
     <string>jp.zhavtom.vvvfi</string>
     <key>CFBundleName</key>
@@ -18,28 +14,16 @@
     <key>CFBundleDisplayName</key>
     <string>VVVF_Instruments</string>
     <key>CFBundlePackageType</key>
-    <string>APPL</string>
+    <string>BNDL</string>
     <key>CFBundleSignature</key>
     <string>????</string>
     <key>CFBundleShortVersionString</key>
-    <string>1.0.0</string>
+    <string>0.2.0</string>
     <key>CFBundleVersion</key>
-    <string>1.0.0</string>
+    <string>0.2.0</string>
     <key>NSHumanReadableCopyright</key>
     <string></string>
     <key>NSHighResolutionCapable</key>
     <true/>
-    <key>UIRequiresFullScreen</key>
-    <true/>
-    <key>UIStatusBarHidden</key>
-    <true/>
-    <key>UISupportedInterfaceOrientations</key>
-    <array>
-      <string>UIInterfaceOrientationPortrait</string>
-      <string>UIInterfaceOrientationLandscapeLeft</string>
-      <string>UIInterfaceOrientationLandscapeRight</string>
-    </array>
-    <key>UIBackgroundModes</key>
-    <array/>
   </dict>
 </plist>
