--- a/src/juce_project/vvvfi/Builds/VisualStudio2015/VVVF_Instruments_VST.vcxproj.filters
+++ b/src/juce_project/vvvfi/Builds/VisualStudio2015/VVVF_Instruments_VST.vcxproj.filters
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
+
 <Project ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="JUCE Modules\juce_audio_plugin_client\VST">
@@ -16,6 +17,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="C:\JUCE\modules\juce_audio_plugin_client\VST\juce_VST_Wrapper.cpp">
+      <Filter>JUCE Modules\juce_audio_plugin_client\VST</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\JUCE\modules\juce_audio_plugin_client\VST\juce_VST_Wrapper.mm">
       <Filter>JUCE Modules\juce_audio_plugin_client\VST</Filter>
     </ClCompile>
     <ClCompile Include="C:\JUCE\modules\juce_audio_plugin_client\juce_audio_plugin_client_VST2.cpp">
